# my-daily-tasks

./: .gitignore  CLAUDE.md  INSTALL.md  MANIFEST.in  README.md  build_standalone.sh  opencode.json  pyproject.toml  requirements.txt  setup.py  today.py
today/: cli.py  database.py  display.py  json_store.py  models.py  task_manager.py
