[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "today"
version = "1.0.0"
description = "A simple CLI task manager for daily standups"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.1.7",
    "colorama>=0.4.6",
    "tabulate>=0.9.0",
    "python-dateutil>=2.9.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/today"
Documentation = "https://github.com/yourusername/today#readme"
Repository = "https://github.com/yourusername/today.git"
"Bug Tracker" = "https://github.com/yourusername/today/issues"

[project.scripts]
today = "today.cli:main"

[tool.setuptools.packages.find]
include = ["today*"]
exclude = ["deprecated_code*", "tests*"]